// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeClass options 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "test-active",
    "className": "",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "useActiveClass": true,
  },
  "html": "
<a class=\\"test-active\\" href=\\"/base\\">
  <!--0-->
</a>
",
}
`;

exports[`className option & useActiveClass & activeClass 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "test-active",
    "className": "foo",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "useActiveClass": true,
  },
  "html": "
<a class=\\"foo test-active\\" href=\\"/base\\">
  <!--0-->
</a>
",
}
`;

exports[`className option 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "foo bar",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "Base page",
    "useActiveClass": false,
  },
  "html": "
<a class=\\"foo bar\\" href=\\"/base\\">Base page
  <!--0-->
</a>
",
}
`;

exports[`click 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "useActiveClass": false,
  },
  "html": "
<a class=\\"\\" href=\\"/base\\">
  <!--0-->
</a>
",
}
`;

exports[`params options 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {
      "id": 1,
    },
    "path": "base",
    "text": "",
    "useActiveClass": false,
  },
  "html": "
<a class=\\"\\" href=\\"/base/1\\">
  <!--0-->
</a>
",
}
`;

exports[`render correctly 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "Base page",
    "useActiveClass": false,
  },
  "html": "
<a class=\\"\\" href=\\"/base\\">Base page
  <!--0-->
</a>
",
}
`;

exports[`useActiveClass options 1`] = `
Object {
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "directives": Object {
      "hrefto": [Function],
    },
    "params": Object {},
    "path": "base",
    "text": "",
    "useActiveClass": true,
  },
  "html": "
<a class=\\"active\\" href=\\"/base\\">
  <!--0-->
</a>
",
}
`;
